<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="btn">Log In</string>
    <string name="recipes">Most popular recipes</string>
    <string name="latte">Is a popular coffee drink made with one or two shots of espresso and a larger amount of steamed milk,
        finished with a thin layer of foam.</string>
    <string name="americano">Prepared by diluting an espresso with hot water, giving it a similar strength to,
        but different flavor from, traditionally brewed coffee.</string>
    <string name="frappe">Originating in Greece. Versatile, iced beverage often shaken, blended, or beaten to produce a thick foam,
        typically made with instant coffee, sugar, milk, and ice. </string>
    <string name="flat_white">Similar to a latte but with a higher ratio of coffee to milk, resulting in a stronger flavor.
        It is typically made with a single or double shot of espresso and steamed milk.</string>
    <string name="espresso">A concentrated coffee beverage brewed by forcing hot water through finely-ground coffee beans.
        It serves as the base for many popular coffee drinks.</string>

    <!-- layout -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
</resources>