<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_recipes"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="91dp"
            android:layout_height="102dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/frappe" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="Frappe"
            android:textColor="@color/text_recipes"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="226dp"
            android:layout_height="117dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alata"
            android:text="@string/frappe"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginTop="64dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="109dp"
            android:layout_height="117dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/latte" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="Latte"
            android:textColor="@color/text_recipes"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="226dp"
            android:layout_height="108dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alata"
            android:text="@string/latte"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="82dp"
            android:layout_height="86dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/americano" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="Americano"
            android:textColor="@color/text_recipes"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="226dp"
            android:layout_height="108dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alata"
            android:text="@string/americano"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_text_rounded"
        android:fontFamily="@font/baloo"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/recipes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>