<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".LoginActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/passwordView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="80dp"
            app:layout_constraintBottom_toTopOf="@+id/log_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailView"
            app:layout_constraintVertical_bias="0.24000001">

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="password"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="Enter your password"
                android:inputType="text|textPassword"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="HardcodedText" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="80dp"
            app:layout_constraintBottom_toTopOf="@+id/log_in_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up"
            app:layout_constraintVertical_bias="0.234">

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="Enter your email"
                android:inputType="text|textEmailAddress"
                android:shadowRadius="50"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="HardcodedText" />
        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/baloo"
        android:text="@string/app_name"
        android:textColor="@color/text_login"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/baloo"
        android:text="@string/sign_up"
        android:textColor="@color/text_login"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="212dp"
            android:layout_height="165dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/text_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="131dp"
        android:layout_height="60dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="@color/text_login"
        android:fontFamily="@font/baloo"
        android:onClick="onClick"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>